# ducktrace-python

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
ducktrace/: __init__.py  logger.py
scripts/: release.sh
