[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ducktrace"
version = "0.1.0"
description = "A duck‑themed logging system for Python, with colorful output and file logging."
readme = "README.md"
authors = [
    {name = "QuackHack-McBlindy", email = "QuackHack-McBlindy@duckdns.org"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/QuackHack-McBlindy/ducktrace-python"
Repository = "https://github.com/QuackHack-McBlindy/ducktrace-python"
